force-app/main/default/objects/Endorsement_Version__c/Endorsement_Version__c.object-meta.xml
<CustomObject>
    <label>Endorsement Version</label>
    <nameField>
        <displayFormat>VER-{0000}</displayFormat>
        <label>Endorsement Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endorsement Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>