force-app/main/default/objects/Endorsement_Version__c/fields/Endorsement_Version_Number__c.field-meta.xml
<CustomField>
    <fullName>Endorsement_Version_Number__c</fullName>
    <label>Endorsement Version Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>