force-app/main/default/objects/Endorsement_Version__c/fields/Master_Endorsement__c.field-meta.xml
<CustomField>
    <fullName>Master_Endorsement__c</fullName>
    <label>Master Endorsement</label>
    <referenceTo>Endorsement__c</referenceTo>
    <relationshipName>Master_Endorsement_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>