force-app/main/default/objects/Endorsement_Version__c/fields/Policy_Version__c.field-meta.xml
<CustomField>
    <fullName>Policy_Version__c</fullName>
    <label>Policy Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>