force-app/main/default/objects/Endorsement_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Endorsement_Version_Number__c</columns>
    <columns>Policy_Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>